--- a/app/ui/templates/index.html
+++ b/app/ui/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css?v=20251217-2">
 </head>
 <body>
     <div class="container">
@@ -199,6 +199,6 @@
         </main>
     </div>
 
-    <script src="/scripts/main.js"></script>
+    <script src="/scripts/main.js?v=20251217-7"></script>
 </body>
 </html>
